@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ACA76AA8-1231-480D-A2B0-EA5A63C477EB}</ProjectGuid>
+    <ProjectGuid>{F6C15702-B96F-4581-B8DA-9DA3D6AD5646}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bugger.Proxy.TFS.Test</RootNamespace>
-    <AssemblyName>Bugger.Proxy.TFS.Test</AssemblyName>
+    <RootNamespace>Bugger.Proxy.TFS.Presentation.Test</RootNamespace>
+    <AssemblyName>Bugger.Proxy.TFS.Presentation.Test</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -39,13 +39,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.TeamFoundation.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\Microsoft Visual Studio 11.0\Common7\IDE\ReferenceAssemblies\v2.0\Microsoft.TeamFoundation.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -63,44 +58,19 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Documents\SettingDocumentTest.cs" />
-    <Compile Include="Documents\SettingDocumentTypeTest.cs" />
-    <Compile Include="Models\MappingPairTest.cs" />
-    <Compile Include="Models\TFSFieldTest.cs" />
+    <Compile Include="Converters\ItemsToStringConverterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\MockMessageService.cs" />
-    <Compile Include="TestClassBase.cs" />
-    <Compile Include="TFSSourceControllerTest.cs" />
-    <Compile Include="ViewModels\SettingViewModelTest.cs" />
-    <Compile Include="ViewModels\UriHelpViewModelTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\BigEggCore\Framework\BigEgg.Framework.UnitTesting\BigEgg.Framework.UnitTesting.csproj">
       <Project>{0cc7a8da-a50b-405f-b14c-8b6bbaea42ce}</Project>
       <Name>BigEgg.Framework.UnitTesting</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\BigEggCore\Framework\BigEgg.Framework\BigEgg.Framework.csproj">
-      <Project>{ee01d20c-0f89-4219-a615-e5566a73814e}</Project>
-      <Name>BigEgg.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Bugger.Domain\Bugger.Domain.csproj">
-      <Project>{3dcffaf0-d1e5-4fc1-b37b-4a6a27ae5e4f}</Project>
-      <Name>Bugger.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Bugger.Proxys.TFS.Presentation.Fake\Bugger.Proxy.TFS.Presentation.Fake.csproj">
-      <Project>{02ab8e76-2073-4f30-b891-1a1b60ae5101}</Project>
-      <Name>Bugger.Proxy.TFS.Presentation.Fake</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Bugger.Proxys.TFS\Bugger.Proxy.TFS.csproj">
-      <Project>{5714b0c6-82f3-4cc6-b33e-e3f8835c38fc}</Project>
-      <Name>Bugger.Proxy.TFS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Bugger.Proxys\Bugger.Proxy.csproj">
-      <Project>{E8727087-75F2-435F-BD11-78B4DFF59A40}</Project>
-      <Name>Bugger.Proxy</Name>
+    <ProjectReference Include="..\Bugger.Proxys.TFS.Presentation\Bugger.Proxy.TFS.Presentation.csproj">
+      <Project>{0c5cd96e-9b43-4065-8a02-83b96989e242}</Project>
+      <Name>Bugger.Proxy.TFS.Presentation</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
