@@ -1,4 +1,5 @@
 ﻿using BigEgg.Framework.Presentation;
+using Bugger.Proxy.TFS.Models;
 using Bugger.Proxy.TFS.Presentation.Properties;
 using Bugger.Proxy.TFS.ViewModels;
 using Bugger.Proxy.TFS.Views;
@@ -18,6 +19,12 @@ namespace Bugger.Proxy.TFS.Presentation.DesignData
             this.Settings.UserName = "BigEgg";
             this.Settings.Password = "Password";
             this.Settings.PriorityRed = "1,2";
+
+            var field = new TFSField("Work Item Type");
+            field.AllowedValues.Add("Work Item");
+            field.AllowedValues.Add("Bugs");
+
+            this.TFSFields.Add(field);
         }
 
         private class MockTFSSettingView : MockView, ITFSSettingView
