@@ -2,6 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:c="clr-namespace:Bugger.Proxy.TFS.Presentation.Converters"
+             xmlns:ts="clr-namespace:Bugger.Proxy.TFS.Presentation.TemplateSelectors"
              xmlns:p="clr-namespace:Bugger.Proxy.TFS.Presentation.Properties"
              xmlns:vm="clr-namespace:Bugger.Proxy.TFS.ViewModels;assembly=Bugger.Proxy.TFS"
              xmlns:dd="clr-namespace:Bugger.Proxy.TFS.Presentation.DesignData"
@@ -9,6 +11,22 @@
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance dd:SampleTFSSettingViewModel, IsDesignTimeCreatable=True}"
              d:DesignHeight="550" d:DesignWidth="450">
+    <UserControl.Resources>
+        <DataTemplate x:Key="TFSFieldComboExpanded">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition SharedSizeGroup="A"/>
+                    <ColumnDefinition SharedSizeGroup="B"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="{Binding Name}" FontWeight="Bold" Margin="0,0,10,0" VerticalAlignment="Center"/>
+                <TextBlock Text="{Binding AllowedValues, Converter={x:Static c:ItemsToStringConverter.Default}}" Grid.Column="1" VerticalAlignment="Center"/>
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="TFSFieldComboCollapsed">
+            <TextBlock Text="{Binding Name}" VerticalAlignment="Center"/>
+        </DataTemplate>
+    </UserControl.Resources>
+    
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
@@ -73,21 +91,23 @@
                             <GridViewColumn Width="210" Header="{x:Static p:Resources.TFSField}">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <ComboBox Width="195" SelectedItem="{Binding FieldName}" ItemsSource="{Binding Path=DataContext.TFSFields, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"/>
+                                        <ComboBox Width="195" Grid.IsSharedSizeScope="True" SelectedValue="{Binding FieldName}" ItemsSource="{Binding Path=DataContext.TFSFields, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" SelectedValuePath="Name">
+                                            <ComboBox.ItemTemplateSelector>
+                                                <ts:TFSFieldComboTemplateSelector/>
+                                            </ComboBox.ItemTemplateSelector>
+                                        </ComboBox>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
                         </GridView>
                     </ListView.View>
                 </ListView>
-                <!--<DataGrid ItemsSource="{Binding Settings.PropertyMappingList}" Grid.Row="1" Grid.ColumnSpan="4" Margin="0,0,0,10" AutoGenerateColumns="False">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="{x:Static p:Resources.BugProperty}" IsReadOnly="True" Binding="{Binding PropertyName}" Width="*"/>
-                        <DataGridComboBoxColumn Header="{x:Static p:Resources.TFSField}" SelectedItemBinding="{Binding FieldName}" Width="*" ItemsSource="{Binding Source={x:Static vm:TFSSettingViewModel.TFSFields}}"/>
-                    </DataGrid.Columns>
-                </DataGrid>-->
                 <Label Content="{x:Static p:Resources.BugFilter}" Grid.Row="2" VerticalAlignment="Center"/>
-                <ComboBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" ItemsSource="{Binding TFSFields}" SelectedItem="{Binding Settings.BugFilterField}"/>
+                <ComboBox Grid.Row="2" Grid.IsSharedSizeScope="True" Grid.Column="1" VerticalAlignment="Center" ItemsSource="{Binding TFSFields}" SelectedValue="{Binding Settings.BugFilterField}" SelectedValuePath="Name">
+                    <ComboBox.ItemTemplateSelector>
+                        <ts:TFSFieldComboTemplateSelector/>
+                    </ComboBox.ItemTemplateSelector>
+                </ComboBox>
                 <TextBlock Text="{x:Static p:Resources.Equal}" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 <TextBox Grid.Row="2" Grid.Column="3" VerticalAlignment="Center" Text="{Binding Settings.BugFilterValue, UpdateSourceTrigger=PropertyChanged}"/>
                 <Label Content="{x:Static p:Resources.PriorityRed}" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Target="{Binding ElementName=priorityRed}"/>
