@@ -19,6 +19,9 @@ Alpha 3 (v0.3.0)
 Alpha 2 (v0.2.0) <----- Currently Working
     Application:
         Filter bug by its status.
+    Proxies
+        TFS Proxy
+            Show the allowed value for TFS field.
 
 Alpha 1 (v0.1.0) <----- Currently Release
     Application:
